Added API key security scheme
